syntax = "proto3";

package stats.services;

import "messages/events_requests.proto";
import "google/protobuf/empty.proto";

option java_package = "ru.practicum.ewm.grpc.stats.controller";

service RecommendationsController {
    rpc GetRecommendationsForUser(stats.messages.UserPredictionsRequestProto)
     returns (stream stats.messages.RecommendedEventProto);

    rpc GetSimilarEvents(stats.messages.SimilarEventsRequestProto)
     returns (stream stats.messages.RecommendedEventProto);

    rpc GetInteractionsCount(stats.messages.InteractionsCountRequestProto)
    returns (stream stats.messages.RecommendedEventProto);
}